SERVER-6802 allow bulk insert options from the shell