jstests/basicb.js
@@ -3,5 +3,5 @@ t = db.basicb;
 t.drop();
 
 assert.throws( "t.insert( { '$a' : 5 } );" );
-t.insert( { '$a' : 5 } , true );
+t.insert( { '$a' : 5 } , 0, true );
 
